--- a/prms-frontend/index.html
+++ b/prms-frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/tracely-logo.png" />
+    <link rel="icon" type="image/svg+xml" href="/rhulogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tracely</title>
   </head>
