--- a/prms-frontend/index.html
+++ b/prms-frontend/index.html
@@ -3,7 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tracely - Patient Record Management System</title>
+    <title>PRSTF</title>
+    
+    <!-- Favicon and Logo -->
+    <link rel="icon" type="image/png" href="/rhulogo.png" />
+    <link rel="apple-touch-icon" href="/rhulogo.png" />
+    
+    <!-- Meta tags for better SEO and sharing -->
+    <meta name="description" content="Patient Record System with Tracking and ARIMA-Based Forecasting for Top 5 Communicable Diseases" />
+    <meta property="og:image" content="/rhulogo.png" />
   </head>
   <body>
     <div id="root"></div>
